commit tree d3a7c76a479014c86cea02de4c09f8aeaa02c4cc

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,24 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
+    <div class ="form">
+      <form method = "post" action = "/login">
+    </div>
+
+    <div class = "form">
+      <label for ="username"> Enter Your username</label>
+      <input type = "text" name ="username">
+    </div>
+
+    <div class = "form"
+      <label for ="password"> Enter Your Password</label>
+      <input type = "text" name ="password">
+    </div>
+
+    <div class = "button">
+      <input type = "submit" value = "Log In"/>
+    </div>
+      </form>
 
   </body>
 </html>
